Fixed text out of box issue

--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ html{
 
 .proj-content3{
   width: 1000px;
-  height: 500px;
+  height: 530px;
   background: rgba(0,0,0, 0.5);
   margin: 0 auto;
   padding: 30px;
